# hs-exercises

./: .emacs-server  .gitignore  .hlint.yaml  AGENTS.md  PROJECT-LAYOUT.md  cabal.project  fourmolu.yaml  hs-exercises.cabal
src/Exercises/: Compose.hs  Composition.hs  Identity.hs  IdentityT.hs  MyList.hs  MyMaybe.hs  MyMaybeT.hs  MyState.hs
test/Exercises/: MyListSpec.hs  MyMaybeSpec.hs  MyMaybeTSpec.hs  MyStateSpec.hs
