cabal-version: 3.0
name:          hs-exercises
version:       0.1.0.0
synopsis:      Haskell exercises — monads, applicatives, and friends
license:       NONE
build-type:    Simple


common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wunused-packages
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings

library
  import:         defaults
  hs-source-dirs: src
  build-depends:    base >=4.19 && <5
  exposed-modules:
    Exercises.MyMaybe
    Exercises.MyMaybeT
    Exercises.MyList
    Exercises.MyState

test-suite tests
  import:         defaults
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    Exercises.MyMaybeSpec
    Exercises.MyListSpec
    Exercises.MyStateSpec
  build-depends:
    , base          >=4.19 && <5
    , hs-exercises
    , hspec         >=2.11
  build-tool-depends:
    hspec-discover:hspec-discover
